--- a/ged-webapp/src/main/webapp/resources/views/message-new.html
+++ b/ged-webapp/src/main/webapp/resources/views/message-new.html
@@ -5,6 +5,12 @@
     <form>
 
         <div class="formField">
+            <label for="message.date">Message</label>
+            <textarea id="message.date" ng-model="message.date">
+            </textarea>
+        </div>
+
+        <div class="formField">
             <label for="message.message">Message</label>
             <textarea id="message.message" ng-model="message.message">
             </textarea>
