--- a/ged-webapp/src/main/webapp/WEB-INF/views/home.html
+++ b/ged-webapp/src/main/webapp/WEB-INF/views/home.html
@@ -1,4 +1,5 @@
 ﻿<!-- http://spring.io/guides/tutorials/web/4/ -->
+<!-- http://demos.kendoui.com/web/treeview/mvvm.html | http://kendo-labs.github.io/angular-kendo/#/-->
 <html ng-app="gedApp">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -6,18 +7,16 @@
 	
 	<title>Simple Ged</title>
 	
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="/resources/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/resources/css/kendo.common.min.css" />
+    <link rel="stylesheet" href="/resources/css/kendo.default.min.css" />
+    <link rel="stylesheet" href="/resources/css/kendo.bootstrap.min.css" />
 
-	<!-- 
-	<script src="/resources/js/libs/jquery.min.js"></script>
-    <script src="/resources/js/libs/bootstrap.min.js"></script>
-    <script src="/resources/js/libs/angular.min.js"></script> 
-    -->
-
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular-resource.min.js"></script>
-	
-	<script src="https://code.jquery.com/jquery.js"></script>
+    <script src="/resources/js/libs/jquery.min.js"></script>
+    <script src="/resources/js/libs/angular.min.js"></script>
+    <script src="/resources/js/libs/angular-resource.min.js"></script>
+    <script src="/resources/js/libs/kendo.all.min.js"></script>
+    <script src="/resources/js/libs/angular-kendo.js"></script>
 	
 	<script src="/resources/js/application.js"></script>
 	<script src="/resources/js/controllers.js"></script>
@@ -26,8 +25,8 @@
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+      <script src="/resources/js/libs/html5shiv.js"></script>
+      <script src="/resources/js/libs/respond.min.js"></script>
     <![endif]-->
 </head>
 <body>
@@ -51,6 +50,67 @@
 		</div>
 
 	</div> <!-- /container -->
-	
+
+    <div id="example" class="k-content">
+        <div class="demo-section">
+            <ul id="treeview">
+                <li data-expanded="true">
+                    <span class="k-sprite folder"></span>
+                    My Web Site
+                    <ul>
+                        <li data-expanded="true">
+                            <span class="k-sprite folder"></span>images
+                            <ul>
+                                <li><span class="k-sprite image"></span>logo.png</li>
+                                <li><span class="k-sprite image"></span>body-back.png</li>
+                                <li><span class="k-sprite image"></span>my-photo.jpg</li>
+                            </ul>
+                        </li>
+                        <li data-expanded="true">
+                            <span class="k-sprite folder"></span>resources
+                            <ul>
+                                <li data-expanded="true">
+                                    <span class="k-sprite folder"></span>pdf
+                                    <ul>
+                                        <li><span class="k-sprite pdf"></span>brochure.pdf</li>
+                                        <li><span class="k-sprite pdf"></span>prices.pdf</li>
+                                    </ul>
+                                </li>
+                                <li><span class="k-sprite folder"></span>zip</li>
+                            </ul>
+                        </li>
+                        <li><span class="k-sprite html"></span>about.html</li>
+                        <li><span class="k-sprite html"></span>contacts.html</li>
+                        <li><span class="k-sprite html"></span>index.html</li>
+                        <li><span class="k-sprite html"></span>portfolio.html</li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+
+        <script>
+            $(document).ready(function() {
+            $("#treeview").kendoTreeView();
+            });
+        </script>
+
+        <style scoped="">
+            .demo-section {
+            width: 200px;
+            }
+
+            #treeview .k-sprite {
+            background-image: url("/resources/img/coloricons-sprite.png");
+            }
+
+            .rootfolder { background-position: 0 0; }
+            .folder { background-position: 0 -16px; }
+            .pdf { background-position: 0 -32px; }
+            .html { background-position: 0 -48px; }
+            .image { background-position: 0 -64px; }
+
+        </style>
+    </div>
+
 </body>
 </html>
