--- a/ged-webapp/src/main/webapp/WEB-INF/views/home.html
+++ b/ged-webapp/src/main/webapp/WEB-INF/views/home.html
@@ -38,7 +38,7 @@
 				<li th:class="${section_document}? 'active'"><a href="/">Documents</a></li>
 				<li th:class="${section_about}? 'active'"><a href="/about">A propos</a></li>
 			</ul>
-			<h3 class="text-muted">Simple Ged</h3>
+			<h3 class="text-muted" th:text="${APPLICATION_NAME}">Simple Ged</h3>
 		</div>
 
 
