Show library list

--- a/ged-webapp/src/main/webapp/WEB-INF/views/home.html
+++ b/ged-webapp/src/main/webapp/WEB-INF/views/home.html
@@ -42,10 +42,7 @@
 		</div>
 
 
-		<div ng-view="library-treeview" class="col-md-3">
-		</div>
-			
-		<div id="edm-left-details" class="col-md-9">
+		<div ng-view="library-treeview">
 		</div>
 
 		<!-- 
