--- a/ged-webapp/src/main/webapp/resources/views/library-treeview.html
+++ b/ged-webapp/src/main/webapp/resources/views/library-treeview.html
@@ -1,4 +1,4 @@
-<div id="example" class="k-content">
+<div id="example" class="k-content"  class="col-md-3">
 	<div class="demo-section">
 		<ul id="treeview">
 			<li data-expanded="true"><span class="k-sprite folder"></span>
@@ -114,4 +114,8 @@
 	background-position: 0 -64px;
 }
 </style>
+</div>
+
+	
+<div id="edm-left-details" class="col-md-9">
 </div>
