Auto focus on library if only one

--- a/ged-webapp/src/main/webapp/resources/views/library-list.html
+++ b/ged-webapp/src/main/webapp/resources/views/library-list.html
@@ -1,10 +1,10 @@
 <div id="messageList">
  
-    <h2>Liste des bibliothèques</h2>
+    <h2>Mes bibliothèques</h2>
  
 	<ul>
         <li ng-repeat="library in librairies">
-            <a href="#/library/{{library.id}}"><span>{{library.name}}</span></a> :
+            <a href="#/doc/{{library.id}}"><span>{{library.name}}</span></a> :
             <span>{{library.description | filter:ellipsis:20}}</span> &nbsp;
         </li>
     </ul>
