--- a/ged-webapp/src/main/webapp/resources/views/library-treeview.html
+++ b/ged-webapp/src/main/webapp/resources/views/library-treeview.html
@@ -1,6 +1,16 @@
 <div id="example" class="k-content"  class="col-md-3">
-	<div class="demo-section">
+
+	<div class="edm-treeview">
 		<ul id="treeview">
+			<li data-expanded="false"><span class="k-sprite folder"></span>
+				Docs !
+			</li>
+		</ul>
+	</div>
+
+	<br/><br/><br/><br/>
+	<div class="demo-section">
+		<ul id="treeview2">
 			<li data-expanded="true"><span class="k-sprite folder"></span>
 				My Web Site
 				<ul>
@@ -117,5 +127,5 @@
 </div>
 
 	
-<div id="edm-left-details" class="col-md-9">
+<div id="edm-details" class="col-md-9">
 </div>
