Add path finder (basic)

--- a/ged-webapp/src/main/webapp/resources/views/library-treeview.html
+++ b/ged-webapp/src/main/webapp/resources/views/library-treeview.html
@@ -3,7 +3,7 @@
 	<div class="edm-treeview">
 		<ul id="treeview">
 			<li data-expanded="false"><span class="k-sprite folder"></span>
-				Docs !
+				{{library.name}}
 			</li>
 		</ul>
 	</div>
