--- a/ged-webapp/src/main/webapp/resources/views/library-list.html
+++ b/ged-webapp/src/main/webapp/resources/views/library-list.html
@@ -4,7 +4,7 @@
  
 	<ul>
         <li ng-repeat="library in librairies">
-            <a href="#/node/{{library.name}}/"><span>{{library.name}}</span></a> :
+            <a href="#/node/{{library.name}}"><span>{{library.name}}</span></a> :
             <span>{{library.description | filter:ellipsis:20}}</span> &nbsp;
         </li>
     </ul>
