load root as any node

--- a/ged-webapp/src/main/webapp/resources/views/node-treeview.html
+++ b/ged-webapp/src/main/webapp/resources/views/node-treeview.html
@@ -2,11 +2,9 @@
 
 	<div class="edm-treeview">
 		<ul id="treeview">
-			<li data-expanded="false" data-nodeid="{{library.id}}" data-node-children-are-loaded="false"><span class="k-sprite folder"></span>
-				{{library.name}}
-			</li>
 		</ul>
 	</div>
+
 
 	<br/><br/><br/><br/>
 	<div class="demo-section">
@@ -102,6 +100,7 @@
 }
 
 #treeview .k-sprite {
+	vertical-align : middle;
 	background-image: url("/resources/img/coloricons-sprite.png");
 }
 
