Init node from URL

--- a/edm-webapp/src/main/webapp/resources/views/node-treeview.html
+++ b/edm-webapp/src/main/webapp/resources/views/node-treeview.html
@@ -66,7 +66,7 @@
 
 	<style scoped="">
 #treeview .k-sprite {
-	vertical-align : middle;
+	vertical-align: middle;
 	background-image: url("/resources/img/coloricons-sprite.png");
 }
 
@@ -92,6 +92,9 @@
 </style>
 </div>
 
-	
+
 <div id="edm-details" class="col-md-9">
+	<div class="slide-animate-container">
+		<div class="slide-animate" ng-include="template.url"></div>
+	</div>
 </div>
