--- a/edm-webapp/src/main/webapp/WEB-INF/views/home.html
+++ b/edm-webapp/src/main/webapp/WEB-INF/views/home.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/resources/css/kendo.common.min.css" />
     <link rel="stylesheet" href="/resources/css/kendo.default.min.css" />
     <link rel="stylesheet" href="/resources/css/kendo.bootstrap.min.css" />
+    <link rel="stylesheet" href="/resources/css/icons-sprite.css" />
 
     <script src="/resources/js/libs/jquery.min.js"></script>
     <script src="/resources/js/libs/angular.min.js"></script>
