--- a/edm-webapp/src/main/webapp/resources/views/node-treeview.html
+++ b/edm-webapp/src/main/webapp/resources/views/node-treeview.html
@@ -1,4 +1,4 @@
-<div id="example" class="k-content" class="col-md-3">
+<div class="k-content col-md-3">
 
 	<div class="edm-treeview">
 		<ul id="treeview">
@@ -46,7 +46,7 @@
 
 <div id="edm-details" class="col-md-9">
 	<div class="slide-animate-container">
-		<b>=> {{scope.nodePathArray}}</b>
+		<b>=> {{currentNodeName}}</b>
 		<div class="slide-animate" ng-include="template.url"></div>
 	</div>
 </div>
