Less generic class names

--- a/edm-webapp/src/main/webapp/resources/css/icons-sprite.css
+++ b/edm-webapp/src/main/webapp/resources/css/icons-sprite.css
@@ -1,4 +1,4 @@
-#treeview .k-sprite {
+#edm-treeview .k-sprite {
 	vertical-align: middle;
 	background-image: url("/resources/img/coloricons-sprite.png");
 }
