Include angular anims

--- a/edm-webapp/src/main/webapp/WEB-INF/views/home.html
+++ b/edm-webapp/src/main/webapp/WEB-INF/views/home.html
@@ -17,6 +17,7 @@
     <script src="/resources/js/libs/angular.min.js"></script>
     <script src="/resources/js/libs/angular-route.min.js"></script>
     <script src="/resources/js/libs/angular-resource.min.js"></script>
+    <script src="/resources/js/libs/angular-animate.min.js"></script>
     <script src="/resources/js/libs/kendo.all.min.js"></script>
     <script src="/resources/js/libs/angular-kendo.js"></script>
 	
