Add document path

--- a/edm-webapp/src/main/webapp/resources/views/node-treeview.document.html
+++ b/edm-webapp/src/main/webapp/resources/views/node-treeview.document.html
@@ -1,1 +1,13 @@
-Document
+
+<h1>{{currentNode.name}}</h1>
+
+<div ng-init="currentNodePath = getDocumentNodeFilePath(currentNode)">
+	<object data="{{currentNodePath}}" type="{{currentNode.fileContentType}}" width="100%" height="500px">
+		<p>
+			<a href="{{currentNodePath}}">
+				Télécharger
+			</a>
+		</p>
+	</object>
+</div>
+
