Document link on front

--- a/edm-webapp/src/main/webapp/WEB-INF/views/home.html
+++ b/edm-webapp/src/main/webapp/WEB-INF/views/home.html
@@ -1,6 +1,4 @@
-﻿<!-- http://spring.io/guides/tutorials/web/4/ -->
-<!-- http://demos.kendoui.com/web/treeview/mvvm.html | http://kendo-labs.github.io/angular-kendo/#/-->
-<html ng-app="edmApp">
+﻿<html ng-app="edmApp">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
