Add document service and split code

--- a/edm-webapp/src/main/webapp/WEB-INF/views/home.html
+++ b/edm-webapp/src/main/webapp/WEB-INF/views/home.html
@@ -21,6 +21,9 @@
 	
 	<script src="/resources/js/application.js"></script>
 	<script src="/resources/js/controllers.js"></script>
+	<script src="/resources/js/controllers.node.js"></script>
+	<script src="/resources/js/controllers.library.js"></script>
+	<script src="/resources/js/controllers.document.js"></script>
 	<script src="/resources/js/services.js"></script>
 
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
