Add file upload

--- a/edm-webapp/src/main/webapp/WEB-INF/views/home.html
+++ b/edm-webapp/src/main/webapp/WEB-INF/views/home.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="/resources/css/kendo.default.min.css" />
     <link rel="stylesheet" href="/resources/css/kendo.bootstrap.min.css" />
     <link rel="stylesheet" href="/resources/css/icons-sprite.css" />
-
+    <link rel="stylesheet" href="/resources/css/jquery.fileupload.css" />
+    <link rel="stylesheet" href="/resources/css/jquery.fileupload-ui.css" />
+    
     <script src="/resources/js/libs/jquery.min.js"></script>
     <script src="/resources/js/libs/angular.min.js"></script>
     <script src="/resources/js/libs/angular-route.min.js"></script>
@@ -18,6 +20,19 @@
     <script src="/resources/js/libs/angular-animate.min.js"></script>
     <script src="/resources/js/libs/kendo.all.min.js"></script>
     <script src="/resources/js/libs/angular-kendo.js"></script>
+    <script src="/resources/js/libs/bootstrap.min.js"></script>
+    
+	<script src="/resources/js/libs/jquery.ui.widget.js"></script>
+	<script src="/resources/js/libs/load-image.min.js"></script>
+	<script src="/resources/js/libs/canvas-to-blob.min.js"></script>
+	<script src="/resources/js/libs/jquery.iframe-transport.js"></script>
+	<script src="/resources/js/libs/jquery.fileupload.js"></script>
+	<script src="/resources/js/libs/jquery.fileupload-process.js"></script>
+	<script src="/resources/js/libs/jquery.fileupload-image.js"></script>
+	<script src="/resources/js/libs/jquery.fileupload-audio.js"></script>
+	<script src="/resources/js/libs/jquery.fileupload-video.js"></script>
+	<script src="/resources/js/libs/jquery.fileupload-validate.js"></script>
+	<script src="/resources/js/libs/jquery.fileupload-angular.js"></script>
 	
 	<script src="/resources/js/application.js"></script>
 	<script src="/resources/js/controllers.js"></script>
