--- a/edm-webapp/src/main/webapp/resources/views/message-new.html
+++ b/edm-webapp/src/main/webapp/resources/views/message-new.html
@@ -6,7 +6,7 @@
 
         <div class="formField">
             <label for="message.date">Message</label>
-            <textarea id="message.date" ng-model="message.date">
+            <textarea id="message.date" ng-model="message.date" required>
             </textarea>
         </div>
 
