--- a/edm-webapp/src/main/webapp/resources/views/document-new.html
+++ b/edm-webapp/src/main/webapp/resources/views/document-new.html
@@ -1,108 +1,68 @@
 <div id="documentNew">
 
-	<form class="form-horizontal" role="form" method="POST" enctype="multipart/form-data" data-file-upload="options" data-ng-class="{'fileupload-processing': processing() || loadingFiles}">
-	
+	<form class="form-horizontal" role="form" data-ng-class="{'fileupload-processing': processing() || loadingFiles}" data-file-upload="fileUploadOptions">
+
 		<legend>Nouveau document</legend>
-	
+
 		<input type="hidden" ng-model="document.parent" value="{{parentNode}}" />
-	
+
 		<div class="form-group">
 			<label for="document.name" class="col-sm-2 control-label">Nom</label>
 			<div class="col-sm-10">
 				<input type="text" class="form-control" id="document.name" ng-model="document.name" placeholder="Mon document" required />
 			</div>
 		</div>
-		
+
 		<div class="form-group">
 			<label for="document.date" class="col-sm-2 control-label">Date</label>
 			<div class="col-sm-10">
 				<input type="date" class="form-control" id="document.date" ng-model="document.date" placeholder="Date du document" required />
 			</div>
 		</div>
-		
+
 		<div class="form-group">
 			<label for="document.description" class="col-sm-2 control-label">Description</label>
 			<div class="col-sm-10">
 				<textarea class="form-control" rows="3" id="document.description" ng-model="document.description"></textarea>
 			</div>
 		</div>
-		
+
 		<div class="form-group">
 			<label for="document.description" class="col-sm-2 control-label">Fichier</label>
 			<div class="col-sm-10">
 				<div class="row fileupload-buttonbar">
-		            <div class="col-lg-5">
-		                <!-- The fileinput-button span is used to style the file input field as button -->
-		                <span class="btn btn-success fileinput-button" ng-class="{disabled: disabled}">
-		                    <i class="glyphicon glyphicon-plus"></i>
-		                    <span>Add files...</span>
-		                    <input type="file" name="files[]" multiple ng-disabled="disabled">
-		                </span>
-		                <button type="button" class="btn btn-primary start" data-ng-click="submit()">
-		                    <i class="glyphicon glyphicon-upload"></i>
-		                    <span>Start upload</span>
-		                </button>
-		                <button type="button" class="btn btn-warning cancel" data-ng-click="cancel()">
-		                    <i class="glyphicon glyphicon-ban-circle"></i>
-		                    <span>Cancel upload</span>
-		                </button>
-		                <!-- The global file processing state -->
-		                <span class="fileupload-process"></span>
-		            </div>
-		            <!-- The global progress state -->
-		            <div class="col-lg-5 fade" data-ng-class="{in: active()}">
-		                <!-- The global progress bar -->
-		                <div class="progress progress-striped active" data-file-upload-progress="progress()"><div class="progress-bar progress-bar-success" data-ng-style="{width: num + '%'}"></div></div>
-		                <!-- The extended global progress state -->
-		                <div class="progress-extended">&nbsp;</div>
-		            </div>
-		        </div>
-		        <!-- The table listing the files available for upload/download -->
-		        <table class="table table-striped files ng-cloak">
-		            <tr data-ng-repeat="file in queue" data-ng-class="{'processing': file.$processing()}">
-		                <td data-ng-switch data-on="!!file.thumbnailUrl">
-		                    <div class="preview" data-ng-switch-when="true">
-		                        <a data-ng-href="{{file.url}}" title="{{file.name}}" download="{{file.name}}" data-gallery><img data-ng-src="{{file.thumbnailUrl}}" alt=""></a>
-		                    </div>
-		                    <div class="preview" data-ng-switch-default data-file-upload-preview="file"></div>
-		                </td>
-		                <td>
-		                    <p class="name" data-ng-switch data-on="!!file.url">
-		                        <span data-ng-switch-when="true" data-ng-switch data-on="!!file.thumbnailUrl">
-		                            <a data-ng-switch-when="true" data-ng-href="{{file.url}}" title="{{file.name}}" download="{{file.name}}" data-gallery>{{file.name}}</a>
-		                            <a data-ng-switch-default data-ng-href="{{file.url}}" title="{{file.name}}" download="{{file.name}}">{{file.name}}</a>
-		                        </span>
-		                        <span data-ng-switch-default>{{file.name}}</span>
-		                    </p>
-		                    <strong data-ng-show="file.error" class="error text-danger">{{file.error}}</strong>
-		                </td>
-		                <td>
-		                    <p class="size">{{file.size | formatFileSize}}</p>
-		                    <div class="progress progress-striped active fade" data-ng-class="{pending: 'in'}[file.$state()]" data-file-upload-progress="file.$progress()"><div class="progress-bar progress-bar-success" data-ng-style="{width: num + '%'}"></div></div>
-		                </td>
-		                <td>
-		                    <button type="button" class="btn btn-primary start" data-ng-click="file.$submit()" data-ng-hide="!file.$submit || options.autoUpload" data-ng-disabled="file.$state() == 'pending' || file.$state() == 'rejected'">
-		                        <i class="glyphicon glyphicon-upload"></i>
-		                        <span>Start</span>
-		                    </button>
-		                    <button type="button" class="btn btn-warning cancel" data-ng-click="file.$cancel()" data-ng-hide="!file.$cancel">
-		                        <i class="glyphicon glyphicon-ban-circle"></i>
-		                        <span>Cancel</span>
-		                    </button>
-		                    <button data-ng-controller="FileDestroyController" type="button" class="btn btn-danger destroy" data-ng-click="file.$destroy()" data-ng-hide="!file.$destroy">
-		                        <i class="glyphicon glyphicon-trash"></i>
-		                        <span>Delete</span>
-		                    </button>
-		                </td>
-		            </tr>
-		        </table>
+					<!-- The fileupload-buttonbar contains buttons to add/delete files and start/cancel the upload -->
+					<div class="row fileupload-buttonbar">
+						<div class="col-sm-5">
+							<!-- The fileinput-button span is used to style the file input field as button -->
+							<span class="btn btn-success fileinput-button" ng-class="{disabled: disabled}"> <i class="glyphicon glyphicon-plus"></i> <span>Sélectionner fichier</span> <input type="file" name="files[]" ng-disabled="disabled" />
+							</span>
+							<span data-ng-repeat="file in queue" data-ng-class="{'processing': file.$processing()}">
+								<span>{{file.name}}</span>
+								<span class="size">({{file.size | formatFileSize}})</span>
+							</span>
+							
+							<!-- The global file processing state -->
+							<span class="fileupload-process"></span>
+						</div>
+						<!-- The global progress state -->
+						<div class="col-sm-5 fade" data-ng-class="{in: active()}">
+							<!-- The global progress bar -->
+							<div class="progress progress-striped active" data-file-upload-progress="progress()">
+								<div class="progress-bar progress-bar-success" data-ng-style="{width: num + '%'}"></div>
+							</div>
+							<!-- The extended global progress state -->
+							<div class="progress-extended">&nbsp;</div>
+						</div>
+					</div>
+				</div>
 			</div>
-	   	</div>
-		
+		</div>
+
 		<div class="form-group">
 			<div class="col-sm-offset-2 col-sm-10">
 				<button ng-click="back()" class="btn">Annuler</button>
-				<button type="submit" class="btn btn-primary">Enregistrer</button>
+				<button ng-click="submit()" class="btn btn-primary">Enregistrer</button>
 			</div>
 		</div>
 	</form>
