--- a/edm-webapp/src/main/webapp/resources/views/document-new.html
+++ b/edm-webapp/src/main/webapp/resources/views/document-new.html
@@ -1,70 +1,68 @@
-<div id="documentNew">
 
-	<form class="form-horizontal" role="form" data-ng-class="{'fileupload-processing': processing() || loadingFiles}" data-file-upload="fileUploadOptions">
+<form  name="newDocumentForm" class="form-horizontal" role="form" >
 
-		<legend>Nouveau document</legend>
+	<legend>Nouveau document</legend>
 
-		<input type="hidden" ng-model="document.parent" value="{{parentNode}}" />
-
-		<div class="form-group">
-			<label for="document.name" class="col-sm-2 control-label">Nom</label>
-			<div class="col-sm-10">
-				<input type="text" class="form-control" id="document.name" ng-model="document.name" placeholder="Mon document" required />
-			</div>
+	<div class="form-group">
+		<label for="document.name" class="col-sm-2 control-label">Nom</label>
+		<div class="col-sm-10">
+			<input type="text" class="form-control" id="document.name" ng-model="document.name" placeholder="Mon document" ng-required="true" />
 		</div>
+	</div>
 
-		<div class="form-group">
-			<label for="document.date" class="col-sm-2 control-label">Date</label>
-			<div class="col-sm-10">
-				<input type="date" class="form-control" id="document.date" ng-model="document.date" placeholder="Date du document" required />
-			</div>
+	<div class="form-group">
+		<label for="document.date" class="col-sm-2 control-label">Date</label>
+		<div class="col-sm-10">
+			<input type="date" class="form-control" id="document.date" ng-model="document.date" placeholder="Date du document" ng-required="true" />
 		</div>
+	</div>
 
-		<div class="form-group">
-			<label for="document.description" class="col-sm-2 control-label">Description</label>
-			<div class="col-sm-10">
-				<textarea class="form-control" rows="3" id="document.description" ng-model="document.description"></textarea>
-			</div>
+	<div class="form-group">
+		<label for="document.description" class="col-sm-2 control-label">Description</label>
+		<div class="col-sm-10">
+			<textarea class="form-control" rows="3" id="document.description" ng-model="document.description"></textarea>
 		</div>
+	</div>
 
-		<div class="form-group">
-			<label for="document.description" class="col-sm-2 control-label">Fichier</label>
-			<div class="col-sm-10">
+</form>
+
+<form id="fileupload" method="POST" enctype="multipart/form-data" class="form-horizontal" data-ng-class="{'fileupload-processing': processing() || loadingFiles}" data-file-upload="fileUploadOptions">
+
+	<div class="form-group">
+		<label for="document.description" class="col-sm-2 control-label">Fichier</label>
+		<div class="col-sm-10">
+			<div class="row fileupload-buttonbar">
+				<!-- The fileupload-buttonbar contains buttons to add/delete files and start/cancel the upload -->
 				<div class="row fileupload-buttonbar">
-					<!-- The fileupload-buttonbar contains buttons to add/delete files and start/cancel the upload -->
-					<div class="row fileupload-buttonbar">
-						<div class="col-sm-5">
-							<!-- The fileinput-button span is used to style the file input field as button -->
-							<span class="btn btn-success fileinput-button" ng-class="{disabled: disabled}"> <i class="glyphicon glyphicon-plus"></i> <span>Sélectionner fichier</span> <input type="file" name="files[]" ng-disabled="disabled" />
-							</span>
-							<span data-ng-repeat="file in queue" data-ng-class="{'processing': file.$processing()}">
-								<span>{{file.name}}</span>
-								<span class="size">({{file.size | formatFileSize}})</span>
-							</span>
-							
-							<!-- The global file processing state -->
-							<span class="fileupload-process"></span>
+					<div class="col-sm-5">
+						<!-- The fileinput-button span is used to style the file input field as button -->
+						<span class="btn btn-success fileinput-button" ng-class="{disabled: disabled}"> <i class="glyphicon glyphicon-plus"></i> <span>Sélectionner fichier</span> <input type="file" name="files" ng-disabled="disabled" />
+						</span> <span data-ng-repeat="file in queue" data-ng-class="{'processing': file.$processing()}"> <span>{{file.name}}</span> <span class="size">({{file.size | formatFileSize}})</span>
+						</span>
+
+						<!-- The global file processing state -->
+						<span class="fileupload-process"></span>
+					</div>
+					<!-- The global progress state -->
+					<div class="col-sm-5 fade" data-ng-class="{in: active()}">
+						<!-- The global progress bar -->
+						<div class="progress progress-striped active" data-file-upload-progress="progress()">
+							<div class="progress-bar progress-bar-success" data-ng-style="{width: num + '%'}"></div>
 						</div>
-						<!-- The global progress state -->
-						<div class="col-sm-5 fade" data-ng-class="{in: active()}">
-							<!-- The global progress bar -->
-							<div class="progress progress-striped active" data-file-upload-progress="progress()">
-								<div class="progress-bar progress-bar-success" data-ng-style="{width: num + '%'}"></div>
-							</div>
-							<!-- The extended global progress state -->
-							<div class="progress-extended">&nbsp;</div>
-						</div>
+						<!-- The extended global progress state -->
+						<div class="progress-extended">&nbsp;</div>
 					</div>
 				</div>
 			</div>
 		</div>
+	</div>	
+	
+</form>
 
-		<div class="form-group">
-			<div class="col-sm-offset-2 col-sm-10">
-				<button ng-click="back()" class="btn">Annuler</button>
-				<button ng-click="submit()" class="btn btn-primary">Enregistrer</button>
-			</div>
+
+	<div class="form-group">
+		<div class="col-sm-offset-2 col-sm-10">
+			<button ng-click="back()" class="btn">Annuler</button>
+			<button ng-click="submitForm()" class="btn btn-primary" ng-disabled="submitFormDisabled">Enregistrer</button>
 		</div>
-	</form>
-
-</div>
+	</div>
