--- a/edm-webapp/src/main/webapp/resources/views/node-treeview.document.html
+++ b/edm-webapp/src/main/webapp/resources/views/node-treeview.document.html
@@ -2,7 +2,8 @@
 <h1>{{currentNode.name}}</h1>
 
 <div ng-init="currentNodePath = getDocumentNodeFilePath(currentNode)">
-	<object data="/document/file/{{currentNodePath}}" type="{{currentNode.fileContentType}}" width="100%" height="800px">
+ 
+	<object data="/document/file/{{currentNodePath}}" type="{{currentNode.fileContentType}}" max-width="100%" height="800px">
 		<p>
 			<a href="/document/file/{{currentNodePath}}">
 				Télécharger
