--- a/edm-webapp/src/main/webapp/resources/views/document-new.html
+++ b/edm-webapp/src/main/webapp/resources/views/document-new.html
@@ -1,5 +1,5 @@
 
-<form  name="newDocumentForm" class="form-horizontal" role="form" >
+<form name="newDocumentForm" class="form-horizontal" role="form" >
 
 	<legend>Nouveau document</legend>
 
@@ -63,6 +63,6 @@
 	<div class="form-group">
 		<div class="col-sm-offset-2 col-sm-10">
 			<button ng-click="back()" class="btn">Annuler</button>
-			<button ng-click="submitForm()" class="btn btn-primary" ng-disabled="submitFormDisabled">Enregistrer</button>
+			<button ng-click="submitForm()" class="btn btn-primary" ng-disabled="newDocumentForm.$invalid || submitFormDisabled">Enregistrer</button>
 		</div>
 	</div>
