--- a/edm-webapp/src/main/webapp/resources/views/document-new.html
+++ b/edm-webapp/src/main/webapp/resources/views/document-new.html
@@ -34,17 +34,18 @@
 			<div class="row fileupload-buttonbar">
 				<!-- The fileupload-buttonbar contains buttons to add/delete files and start/cancel the upload -->
 				<div class="row fileupload-buttonbar">
-					<div class="col-sm-5">
+					<div class="col-sm-10">
 						<!-- The fileinput-button span is used to style the file input field as button -->
-						<span class="btn btn-success fileinput-button" ng-class="{disabled: disabled}"> <i class="glyphicon glyphicon-plus"></i> <span>Sélectionner fichier</span> <input type="file" name="files" ng-disabled="disabled" />
-						</span> <span data-ng-repeat="file in queue" data-ng-class="{'processing': file.$processing()}"> <span>{{file.name}}</span> <span class="size">({{file.size | formatFileSize}})</span>
+						<span class="btn btn-success fileinput-button" ng-class="{disabled: disabled}"> <i class="glyphicon glyphicon-plus"></i> <span>Sélectionner fichier</span> <input type="file" name="files[]" ng-disabled="disabled" />
+						</span> <span>
+							<span>{{file.name}}</span> <span class="size" ng-if="file.size">({{file.size | formatFileSize}})</span>
 						</span>
 
 						<!-- The global file processing state -->
 						<span class="fileupload-process"></span>
 					</div>
 					<!-- The global progress state -->
-					<div class="col-sm-5 fade" data-ng-class="{in: active()}">
+					<div class="col-sm-10 fade" data-ng-class="{in: active()}">
 						<!-- The global progress bar -->
 						<div class="progress progress-striped active" data-file-upload-progress="progress()">
 							<div class="progress-bar progress-bar-success" data-ng-style="{width: num + '%'}"></div>
