--- a/edm-webapp/src/main/webapp/resources/views/node-treeview.document.html
+++ b/edm-webapp/src/main/webapp/resources/views/node-treeview.document.html
@@ -1,13 +1,15 @@
 
-<h2>{{currentNode.name}}</h2>
+<h2>{{currentNode.name}} <small>{{currentNode.date | date : 'dd/MM/yyyy'}}</small></h2>
+
+<blockquote>
+	<p>{{currentNode.description}}</p>
+</blockquote>
 
 <div ng-init="currentNodePath = getDocumentNodeFilePath(currentNode)">
- 
+
 	<object data="/document/file/{{currentNodePath}}" type="{{currentNode.fileContentType}}" max-width="100%" max-height="800px">
 		<p>
-			<a href="/document/file/{{currentNodePath}}">
-				Télécharger
-			</a>
+			<a href="/document/file/{{currentNodePath}}"> Télécharger </a>
 		</p>
 	</object>
 </div>
