--- a/edm-webapp/src/main/webapp/resources/views/node-treeview.directory.html
+++ b/edm-webapp/src/main/webapp/resources/views/node-treeview.directory.html
@@ -1,9 +1,20 @@
 
 <div ng-init="currentNodePath = getNodePath(currentNode)">
+
+	<form name="newDirectoryForm" role="form">
+		<span class="col-sm-6">
+			<input type="text" class="form-control" ng-model="newDirectory.name" placeholder="Nom du nouveau dossier" ng-required="true" />
+		</span>
+		<button ng-click="addNewDirectoryOnCurrentNode()" class="btn btn-success" ng-disabled="newDirectoryForm.$invalid">Ajouter ce dossier !</button>
+	</form>
+
+	<br/>
+
 	<a href="#/document/add?root={{currentNodePath}}">
 		<span class="btn btn-success fileinput-button">
 		    <i class="glyphicon glyphicon-plus"></i>
 		    <span>Ajouter un document</span>
 		</span>
 	</a>
+
 </div>
