--- a/edm-webapp/src/main/webapp/WEB-INF/views/home.html
+++ b/edm-webapp/src/main/webapp/WEB-INF/views/home.html
@@ -57,7 +57,9 @@
 				<li th:class="${section_document}? 'active'"><a href="/">Documents</a></li>
 				<li th:class="${section_about}? 'active'"><a href="/about">A propos</a></li>
 			</ul>
-			<h3 class="text-muted" th:text="${APPLICATION_NAME}">Simple Ged</h3>
+			<a href="/">
+				<h3 class="text-muted" th:text="${APPLICATION_NAME}">Simple Ged</h3>
+			</a>
 		</div>
 
 
