--- a/edm-webapp/src/main/webapp/resources/views/document-new.html
+++ b/edm-webapp/src/main/webapp/resources/views/document-new.html
@@ -6,7 +6,7 @@
 	<div class="form-group">
 		<label for="document.name" class="col-sm-2 control-label">Nom</label>
 		<div class="col-sm-10">
-			<input type="text" class="form-control" id="document.name" ng-model="document.name" placeholder="Mon document" ng-required="true" />
+			<input type="text" name="name" class="form-control" id="document.name" ng-model="document.name" placeholder="Mon document" ng-required="true" />
 		</div>
 	</div>
 
