--- a/edm-webapp/src/main/webapp/resources/views/node-treeview.directory.html
+++ b/edm-webapp/src/main/webapp/resources/views/node-treeview.directory.html
@@ -1,20 +1,48 @@
-
-<div ng-init="currentNodePath = getNodePath(currentNode)">
-
-	<form name="newDirectoryForm" role="form">
-		<span class="col-sm-6">
-			<input type="text" class="form-control" ng-model="newDirectory.name" placeholder="Nom du nouveau dossier" ng-required="true" />
-		</span>
-		<button ng-click="addNewDirectoryOnCurrentNode()" class="btn btn-success" ng-disabled="newDirectoryForm.$invalid">Ajouter ce dossier !</button>
-	</form>
-
-	<br/>
-
-	<a href="#/document/add?root={{currentNodePath}}">
-		<span class="btn btn-success fileinput-button">
-		    <i class="glyphicon glyphicon-plus"></i>
-		    <span>Ajouter un document</span>
+<div class="col-sm-8">
+	<div ng-init="currentNodePath = getNodePath(currentNode)">
+	
+		<form name="newDirectoryForm" role="form">
+			<span class="col-sm-6">
+				<input type="text" class="form-control" ng-model="newDirectory.name" placeholder="Nom du nouveau dossier" ng-required="true" />
+			</span>
+			<button ng-click="addNewDirectoryOnCurrentNode()" class="btn btn-success" ng-disabled="newDirectoryForm.$invalid">Ajouter ce dossier !</button>
+		</form>
+	
+		<br/>
+	
+		<a href="#/document/add?root={{currentNodePath}}">
+			<span class="btn btn-success fileinput-button">
+			    <i class="glyphicon glyphicon-plus"></i>
+			    <span>Ajouter un document</span>
+			</span>
+		</a>
+	
+	</div>
+</div>
+<div class="col-sm-1" ng-init="currentNodePath = getNodePath(currentNode)">
+	<a ng-click="askForDeleteCurrentNode()"> 
+		<span class="btn btn-danger"> 
+			<i class="glyphicon glyphicon-remove"></i> <span>Supprimer</span>
 		</span>
 	</a>
+</div>
 
+<div class="modal fade" id="modalPopover">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header btn-danger">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+				<h4 class="modal-title">Suppression de {{currentNode.name}}</h4>
+			</div>
+			<div class="modal-body">
+				<p>
+					Vous êtes sur le point de faire disparaitre "{{currentNode.name}}", est-ce bien cela que vous voulez ?
+				</p>
+			</div>
+			<div class="modal-footer">
+				<button class="btn" data-dismiss="modal" aria-hidden="true">Non, je ne veux pas faire cela !</button>
+				<a class="btn btn-danger" ng-click="deleteCurrentNode()">Oui, je souhaite supprimer "{{currentNode.name}}"</a>
+			</div>
+		</div>
+	</div>
 </div>
