Add notification service

--- a/edm-webapp/src/main/webapp/WEB-INF/views/home.html
+++ b/edm-webapp/src/main/webapp/WEB-INF/views/home.html
@@ -62,6 +62,7 @@
 			</a>
 		</div>
 
+		<ng-include src="'resources/views/notifications.html'"></ng-include>
 
 		<div ng-view="library-treeview">
 		</div>
